# staged

./: .gitignore  AGENTS.md  README.md  boop.txt  index.html  justfile  package-lock.json  package.json  requirements.md  vite.config.ts
.github/workflows/: ci.yml
docs/: PLUGIN_DEVELOPMENT.md  ai-integration-architecture.md
scripts/: generate-dev-icon.swift
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli_discovery.rs  git.rs  lib.rs  store.rs
src-tauri/src/actions/: detector.rs  executor.rs  mod.rs  runner.rs
src-tauri/src/agent/: acp_client.rs  manager.rs  mod.rs  registry.rs  types.rs
src-tauri/src/ai/: acp_client.rs  chat_store.rs  client.rs  mod.rs  prompt.rs  runner.rs  session.rs  types.rs
src-tauri/src/ai/analysis/: prompt.rs  runner.rs
src-tauri/src/ai/legacy/: mod.rs  runner.rs
src-tauri/src/diff/: ai_describe.rs  git.rs  github.rs  mod.rs
src-tauri/src/git/: checkout.rs  cli.rs  diff.rs  files.rs  github.rs  mod.rs  refs.rs  repo.rs  staging.rs  types.rs  worktree.rs
src-tauri/src/git/diff/: mod.rs  parse.rs
src-tauri/src/plugin/: api.rs  commands.rs  events.rs  menus.rs  mod.rs  permissions.rs
src-tauri/src/project/: mod.rs  store.rs  types.rs
src-tauri/src/review/: mod.rs  store.rs  types.rs
src-tauri/src/symbols/: definition.rs  languages.rs  mod.rs  parser.rs
src-tauri/src/watcher/: mod.rs
src/lib/: ActionOutputModal.svelte  AgentChat.svelte  AgentSelector.svelte  AgentSetupModal.svelte  AnnotationOverlay.svelte  ArtifactCard.svelte  ArtifactDetail.svelte  ArtifactDetailView.svelte  ArtifactsPanel.svelte  BeforeAnnotationOverlay.svelte  BranchCard.svelte  BranchHome.svelte  BranchTopBar.svelte  ChatPanel.svelte  CommentEditor.svelte  (+50 more)
(+43 files in other folders)
