[package]
name = "staged"
version = "0.1.0"
description = "A standalone git diff viewer with staging integration"
authors = ["baxen"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "staged"

[lib]
name = "staged_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"

# Git integration
git2 = "0.19"
thiserror = "2.0"

# File watching
notify = "8.0"
notify-debouncer-full = "0.5"
ignore = "0.4"

# Syntax highlighting
syntect = "5.2"

# Symbol parsing (Go to Definition)
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-json = "0.23"
tree-sitter-php = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
streaming-iterator = "0.1"
tauri-plugin-dialog = "2.4.2"

# Review storage
rusqlite = { version = "0.38", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tauri-plugin-clipboard-manager = "2.3.2"
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.49.0", features = ["sync"] }
open = "5"

[[bin]]
name = "debug_diff"
path = "src/bin/debug_diff.rs"

[dev-dependencies]
tempfile = "3.0"
